[project]
name = "search_engine"
version = "0.0.1"
authors = [
  { name="mohammad parhamd", email="kingdeath1383@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/parhamde/Final-Python"
"Bug Tracker" = "https://github.com/parhamde/Final-Python/issues"